// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AdvancedFilter > should render Advance filter 1`] = `
<DocumentFragment>
  <div
    class="flex! h-full! min-h-0! w-full! flex-1! flex-col! overflow-hidden! bg-background!"
  >
    <div
      class="flex! shrink-0! items-center! justify-between! px-4! py-4!"
    >
      <h3
        class="text-base! leading-6! font-normal! text-filter-text!"
      >
        Filters
      </h3>
      <button
        aria-label="Close"
        class="inline-flex items-center justify-center gap-1 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=size-])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-8 size-8! text-filter-text!"
        data-size="icon-sm"
        data-slot="button"
        data-testid="filter-close"
        data-variant="ghost"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x size-4!"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <form
      aria-label="filter-form"
      class="flex! min-h-0! flex-1! flex-col! overflow-hidden!"
    >
      <div
        class="relative! overflow-auto! min-h-0! flex-1! px-0! pb-8!"
        data-slot="scroll-area"
        dir="ltr"
        style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
      >
        <style>
          [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
        </style>
        <div
          class="h-full! w-full! rounded-[inherit]!"
          data-radix-scroll-area-viewport=""
          data-slot="scroll-area-viewport"
          style="overflow-x: hidden; overflow-y: scroll;"
        >
          <div
            style="min-width: 100%; display: table;"
          >
            <div
              class="flex! flex-col! gap-3!"
              data-orientation="vertical"
              data-slot="accordion"
            >
              <div
                class=""
                data-orientation="vertical"
                data-slot="accordion-item"
                data-state="open"
              >
                <h3
                  class="flex!"
                  data-orientation="vertical"
                  data-slot="accordion-header"
                  data-state="open"
                >
                  <button
                    aria-controls="radix-:r1:"
                    aria-expanded="true"
                    class="flex! w-full! items-center! justify-between! gap-3! border-0! bg-transparent! outline-none! px-4! py-3! text-base! leading-6! font-normal! text-filter-text! data-[state=open]:pt-3! data-[state=open]:pb-3!"
                    data-orientation="vertical"
                    data-radix-collection-item=""
                    data-slot="accordion-trigger"
                    data-state="open"
                    id="radix-:r0:"
                    type="button"
                  >
                    <span
                      class="whitespace-nowrap!"
                    >
                      Schools
                    </span>
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-down transition-transform! duration-200! rotate-180!"
                      fill="none"
                      height="16"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m6 9 6 6 6-6"
                      />
                    </svg>
                  </button>
                </h3>
                <div
                  aria-labelledby="radix-:r0:"
                  class=""
                  data-orientation="vertical"
                  data-slot="accordion-content"
                  data-state="open"
                  id="radix-:r1:"
                  role="region"
                  style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
                >
                  <div
                    class="flex! flex-col! gap-2! px-4! py-2!"
                  >
                    <label
                      class="flex! items-center! text-xs! leading-4! font-normal! text-filter-muted!"
                      for="multi-select-dropdown-building_id_govt"
                    >
                      Building-id
                      <button
                        class="ml-0.5! -m-1.5! inline-flex! size-6! cursor-pointer! items-center! justify-center! rounded-full! border-0! bg-transparent! p-1.5! align-middle! text-filter-muted! transition-colors! hover:text-filter-text!"
                        data-state="closed"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-info"
                          fill="none"
                          height="12"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </button>
                    </label>
                    <div
                      class="relative!"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary! justify-between! text-left! text-filter-muted!"
                        id="multi-select-dropdown-building_id_govt"
                        type="button"
                      >
                        <span
                          class="truncate!"
                        >
                          Select Building-id
                        </span>
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevron-down size-4! shrink-0! text-filter-muted!"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m6 9 6 6 6-6"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="flex! flex-col! gap-2! px-4! py-2!"
                  >
                    <label
                      class="flex! items-center! text-xs! leading-4! font-normal! text-filter-muted!"
                      for="text-input-building_id_govt"
                    >
                      Building Id
                      <button
                        class="ml-0.5! -m-1.5! inline-flex! size-6! cursor-pointer! items-center! justify-center! rounded-full! border-0! bg-transparent! p-1.5! align-middle! text-filter-muted! transition-colors! hover:text-filter-text!"
                        data-state="closed"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-info"
                          fill="none"
                          height="12"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </button>
                    </label>
                    <input
                      class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary!"
                      data-slot="input"
                      id="text-input-building_id_govt"
                      placeholder="Enter building id"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="flex! flex-col! gap-2! px-4! py-2!"
                  >
                    <label
                      class="flex! items-center! text-xs! leading-4! font-normal! text-filter-muted!"
                      for="dropdown-computer_availability"
                    >
                      Computer availability
                      <button
                        class="ml-0.5! -m-1.5! inline-flex! size-6! cursor-pointer! items-center! justify-center! rounded-full! border-0! bg-transparent! p-1.5! align-middle! text-filter-muted! transition-colors! hover:text-filter-text!"
                        data-state="closed"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-info"
                          fill="none"
                          height="12"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </button>
                    </label>
                    <div
                      class="relative!"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary! justify-between! text-left!"
                        id="dropdown-computer_availability"
                        type="button"
                      >
                        <span
                          class="truncate!"
                        >
                          All
                        </span>
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevron-down size-4! shrink-0! text-filter-muted!"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m6 9 6 6 6-6"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="flex! flex-col! gap-2! px-4! py-2!"
                  >
                    <label
                      class="flex! items-center! text-xs! leading-4! font-normal! text-filter-muted!"
                      for="multi-select-dropdown-coverage_type"
                    >
                      Coverage Type
                      <button
                        class="ml-0.5! -m-1.5! inline-flex! size-6! cursor-pointer! items-center! justify-center! rounded-full! border-0! bg-transparent! p-1.5! align-middle! text-filter-muted! transition-colors! hover:text-filter-text!"
                        data-state="closed"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-info"
                          fill="none"
                          height="12"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </button>
                    </label>
                    <div
                      class="relative!"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary! justify-between! text-left! text-filter-muted!"
                        id="multi-select-dropdown-coverage_type"
                        type="button"
                      >
                        <span
                          class="truncate!"
                        >
                          Select Coverage Type
                        </span>
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevron-down size-4! shrink-0! text-filter-muted!"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m6 9 6 6 6-6"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="flex! flex-col! gap-2! px-4! py-2!"
                  >
                    <label
                      class="flex! items-center! text-xs! leading-4! font-normal! text-filter-muted!"
                    >
                      Equipment's count
                      <button
                        class="ml-0.5! -m-1.5! inline-flex! size-6! cursor-pointer! items-center! justify-center! rounded-full! border-0! bg-transparent! p-1.5! align-middle! text-filter-muted! transition-colors! hover:text-filter-text!"
                        data-state="closed"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-info"
                          fill="none"
                          height="12"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </button>
                    </label>
                    <div
                      class="flex! gap-4!"
                    >
                      <input
                        aria-label="Equipment's count min"
                        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary!"
                        data-slot="input"
                        id="num_robotic_equipment-min-input"
                        placeholder="min(30)"
                        type="number"
                        value=""
                      />
                      <input
                        aria-label="Equipment's count max"
                        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary!"
                        data-slot="input"
                        id="num_robotic_equipment-max-input"
                        placeholder="max(100)"
                        type="number"
                        value=""
                      />
                    </div>
                    <label
                      class="flex! cursor-pointer! items-center! gap-2! pt-1! text-xs! text-filter-muted!"
                      for="checkbox-school__num_robotic_equipment__range"
                    >
                      <input
                        class="size-4! accent-primary!"
                        id="checkbox-school__num_robotic_equipment__range"
                        type="checkbox"
                      />
                      <span>
                        Show null values
                      </span>
                    </label>
                  </div>
                  <div
                    class="flex! flex-col! gap-2! px-4! py-2!"
                  >
                    <label
                      class="flex! items-center! text-xs! leading-4! font-normal! text-filter-muted!"
                      for="dropdown-coverage_type"
                    >
                      Maps views - Grouped
                      <button
                        class="ml-0.5! -m-1.5! inline-flex! size-6! cursor-pointer! items-center! justify-center! rounded-full! border-0! bg-transparent! p-1.5! align-middle! text-filter-muted! transition-colors! hover:text-filter-text!"
                        data-state="closed"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-info"
                          fill="none"
                          height="12"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </button>
                    </label>
                    <div
                      class="relative!"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary! justify-between! text-left!"
                        id="dropdown-coverage_type"
                        type="button"
                      >
                        <span
                          class="truncate!"
                        >
                          All
                        </span>
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevron-down size-4! shrink-0! text-filter-muted!"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m6 9 6 6 6-6"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="flex! flex-col! gap-2! px-4! py-2!"
                  >
                    <label
                      class="flex! items-center! text-xs! leading-4! font-normal! text-filter-muted!"
                    >
                      No of Computer
                    </label>
                    <div
                      class="flex! gap-4!"
                    >
                      <input
                        aria-label="No of Computer min"
                        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary!"
                        data-slot="input"
                        id="num_computers-min-input"
                        placeholder="Min (0)"
                        type="number"
                        value=""
                      />
                      <input
                        aria-label="No of Computer max"
                        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary!"
                        data-slot="input"
                        id="num_computers-max-input"
                        placeholder="Max (1450)"
                        type="number"
                        value=""
                      />
                    </div>
                    <label
                      class="flex! cursor-pointer! items-center! gap-2! pt-1! text-xs! text-filter-muted!"
                      for="checkbox-school__num_computers__range"
                    >
                      <input
                        class="size-4! accent-primary!"
                        id="checkbox-school__num_computers__range"
                        type="checkbox"
                      />
                      <span>
                        Show null values
                      </span>
                    </label>
                  </div>
                  <div
                    class="flex! flex-col! gap-2! px-4! py-2!"
                  >
                    <label
                      class="flex! items-center! text-xs! leading-4! font-normal! text-filter-muted!"
                      for="text-input-environment"
                    >
                      Region
                      <button
                        class="ml-0.5! -m-1.5! inline-flex! size-6! cursor-pointer! items-center! justify-center! rounded-full! border-0! bg-transparent! p-1.5! align-middle! text-filter-muted! transition-colors! hover:text-filter-text!"
                        data-state="closed"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-info"
                          fill="none"
                          height="12"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </button>
                    </label>
                    <input
                      class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary!"
                      data-slot="input"
                      id="text-input-environment"
                      placeholder="Enter region"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="flex! flex-col! gap-2! px-4! py-2!"
                  >
                    <label
                      class="flex! items-center! text-xs! leading-4! font-normal! text-filter-muted!"
                      for="dropdown-environment"
                    >
                      School area type - Org
                      <button
                        class="ml-0.5! -m-1.5! inline-flex! size-6! cursor-pointer! items-center! justify-center! rounded-full! border-0! bg-transparent! p-1.5! align-middle! text-filter-muted! transition-colors! hover:text-filter-text!"
                        data-state="closed"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-info"
                          fill="none"
                          height="12"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </button>
                    </label>
                    <div
                      class="relative!"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary! justify-between! text-left!"
                        id="dropdown-environment"
                        type="button"
                      >
                        <span
                          class="truncate!"
                        >
                          All
                        </span>
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevron-down size-4! shrink-0! text-filter-muted!"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m6 9 6 6 6-6"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="flex! flex-col! gap-2! px-4! py-2!"
                  >
                    <label
                      class="flex! items-center! text-xs! leading-4! font-normal! text-filter-muted!"
                    >
                      Test Filter NG-001
                      <button
                        class="ml-0.5! -m-1.5! inline-flex! size-6! cursor-pointer! items-center! justify-center! rounded-full! border-0! bg-transparent! p-1.5! align-middle! text-filter-muted! transition-colors! hover:text-filter-text!"
                        data-state="closed"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-info"
                          fill="none"
                          height="12"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </button>
                    </label>
                    <div
                      class="flex! gap-4!"
                    >
                      <input
                        aria-label="Test Filter NG-001 min"
                        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary!"
                        data-slot="input"
                        id="connectivity_speed-min-input"
                        placeholder="Min (35)"
                        type="number"
                        value=""
                      />
                      <input
                        aria-label="Test Filter NG-001 max"
                        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary!"
                        data-slot="input"
                        id="connectivity_speed-max-input"
                        placeholder="Max (36)"
                        type="number"
                        value=""
                      />
                    </div>
                    <label
                      class="flex! cursor-pointer! items-center! gap-2! pt-1! text-xs! text-filter-muted!"
                      for="checkbox-school__connectivity_speed__range"
                    >
                      <input
                        class="size-4! accent-primary!"
                        id="checkbox-school__connectivity_speed__range"
                        type="checkbox"
                      />
                      <span>
                        Show null values
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex! shrink-0! gap-3! px-4! pb-4!"
      >
        <button
          class="inline-flex items-center justify-center gap-1 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=size-])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 px-4 py-2 has-[>svg]:px-3 h-10! flex-1! rounded-full! bg-secondary! text-sm! font-medium! text-secondary-foreground! hover:bg-secondary/80!"
          data-size="default"
          data-slot="button"
          data-variant="secondary"
          type="button"
        >
          Clear all
        </button>
        <button
          class="inline-flex items-center justify-center gap-1 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=size-])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 h-10! flex-1! rounded-full! bg-primary! text-sm! font-medium! text-primary-foreground! hover:bg-primary/90!"
          data-size="default"
          data-slot="button"
          data-variant="default"
          type="button"
        >
          Apply
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`AdvancedFilter > should render Advance filter 2`] = `
<DocumentFragment>
  <div
    class="flex! h-full! min-h-0! w-full! flex-1! flex-col! overflow-hidden! bg-background!"
  >
    <div
      class="flex! shrink-0! items-center! justify-between! px-4! py-4!"
    >
      <h3
        class="text-base! leading-6! font-normal! text-filter-text!"
      >
        Filters
      </h3>
      <button
        aria-label="Close"
        class="inline-flex items-center justify-center gap-1 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=size-])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-8 size-8! text-filter-text!"
        data-size="icon-sm"
        data-slot="button"
        data-testid="filter-close"
        data-variant="ghost"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x size-4!"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <form
      aria-label="filter-form"
      class="flex! min-h-0! flex-1! flex-col! overflow-hidden!"
    >
      <div
        class="relative! overflow-auto! min-h-0! flex-1! px-0! pb-8!"
        data-slot="scroll-area"
        dir="ltr"
        style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
      >
        <style>
          [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
        </style>
        <div
          class="h-full! w-full! rounded-[inherit]!"
          data-radix-scroll-area-viewport=""
          data-slot="scroll-area-viewport"
          style="overflow-x: hidden; overflow-y: scroll;"
        >
          <div
            style="min-width: 100%; display: table;"
          >
            <div
              class="flex! flex-col! gap-3!"
              data-orientation="vertical"
              data-slot="accordion"
            >
              <div
                class=""
                data-orientation="vertical"
                data-slot="accordion-item"
                data-state="open"
              >
                <h3
                  class="flex!"
                  data-orientation="vertical"
                  data-slot="accordion-header"
                  data-state="open"
                >
                  <button
                    aria-controls="radix-:rn:"
                    aria-expanded="true"
                    class="flex! w-full! items-center! justify-between! gap-3! border-0! bg-transparent! outline-none! px-4! py-3! text-base! leading-6! font-normal! text-filter-text! data-[state=open]:pt-3! data-[state=open]:pb-3!"
                    data-orientation="vertical"
                    data-radix-collection-item=""
                    data-slot="accordion-trigger"
                    data-state="open"
                    id="radix-:rm:"
                    type="button"
                  >
                    <span
                      class="whitespace-nowrap!"
                    >
                      Schools
                    </span>
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-down transition-transform! duration-200! rotate-180!"
                      fill="none"
                      height="16"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m6 9 6 6 6-6"
                      />
                    </svg>
                  </button>
                </h3>
                <div
                  aria-labelledby="radix-:rm:"
                  class=""
                  data-orientation="vertical"
                  data-slot="accordion-content"
                  data-state="open"
                  id="radix-:rn:"
                  role="region"
                  style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
                >
                  <div
                    class="flex! flex-col! gap-2! px-4! py-2!"
                  >
                    <label
                      class="flex! items-center! text-xs! leading-4! font-normal! text-filter-muted!"
                      for="multi-select-dropdown-building_id_govt"
                    >
                      Building-id
                      <button
                        class="ml-0.5! -m-1.5! inline-flex! size-6! cursor-pointer! items-center! justify-center! rounded-full! border-0! bg-transparent! p-1.5! align-middle! text-filter-muted! transition-colors! hover:text-filter-text!"
                        data-state="closed"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-info"
                          fill="none"
                          height="12"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </button>
                    </label>
                    <div
                      class="relative!"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary! justify-between! text-left! text-filter-muted!"
                        id="multi-select-dropdown-building_id_govt"
                        type="button"
                      >
                        <span
                          class="truncate!"
                        >
                          Select Building-id
                        </span>
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevron-down size-4! shrink-0! text-filter-muted!"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m6 9 6 6 6-6"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="flex! flex-col! gap-2! px-4! py-2!"
                  >
                    <label
                      class="flex! items-center! text-xs! leading-4! font-normal! text-filter-muted!"
                      for="text-input-building_id_govt"
                    >
                      Building Id
                      <button
                        class="ml-0.5! -m-1.5! inline-flex! size-6! cursor-pointer! items-center! justify-center! rounded-full! border-0! bg-transparent! p-1.5! align-middle! text-filter-muted! transition-colors! hover:text-filter-text!"
                        data-state="closed"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-info"
                          fill="none"
                          height="12"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </button>
                    </label>
                    <input
                      class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary!"
                      data-slot="input"
                      id="text-input-building_id_govt"
                      placeholder="Enter building id"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="flex! flex-col! gap-2! px-4! py-2!"
                  >
                    <label
                      class="flex! items-center! text-xs! leading-4! font-normal! text-filter-muted!"
                      for="dropdown-computer_availability"
                    >
                      Computer availability
                      <button
                        class="ml-0.5! -m-1.5! inline-flex! size-6! cursor-pointer! items-center! justify-center! rounded-full! border-0! bg-transparent! p-1.5! align-middle! text-filter-muted! transition-colors! hover:text-filter-text!"
                        data-state="closed"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-info"
                          fill="none"
                          height="12"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </button>
                    </label>
                    <div
                      class="relative!"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary! justify-between! text-left!"
                        id="dropdown-computer_availability"
                        type="button"
                      >
                        <span
                          class="truncate!"
                        >
                          All
                        </span>
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevron-down size-4! shrink-0! text-filter-muted!"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m6 9 6 6 6-6"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="flex! flex-col! gap-2! px-4! py-2!"
                  >
                    <label
                      class="flex! items-center! text-xs! leading-4! font-normal! text-filter-muted!"
                      for="multi-select-dropdown-coverage_type"
                    >
                      Coverage Type
                      <button
                        class="ml-0.5! -m-1.5! inline-flex! size-6! cursor-pointer! items-center! justify-center! rounded-full! border-0! bg-transparent! p-1.5! align-middle! text-filter-muted! transition-colors! hover:text-filter-text!"
                        data-state="closed"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-info"
                          fill="none"
                          height="12"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </button>
                    </label>
                    <div
                      class="relative!"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary! justify-between! text-left! text-filter-muted!"
                        id="multi-select-dropdown-coverage_type"
                        type="button"
                      >
                        <span
                          class="truncate!"
                        >
                          Select Coverage Type
                        </span>
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevron-down size-4! shrink-0! text-filter-muted!"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m6 9 6 6 6-6"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="flex! flex-col! gap-2! px-4! py-2!"
                  >
                    <label
                      class="flex! items-center! text-xs! leading-4! font-normal! text-filter-muted!"
                    >
                      Equipment's count
                      <button
                        class="ml-0.5! -m-1.5! inline-flex! size-6! cursor-pointer! items-center! justify-center! rounded-full! border-0! bg-transparent! p-1.5! align-middle! text-filter-muted! transition-colors! hover:text-filter-text!"
                        data-state="closed"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-info"
                          fill="none"
                          height="12"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </button>
                    </label>
                    <div
                      class="flex! gap-4!"
                    >
                      <input
                        aria-label="Equipment's count min"
                        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary!"
                        data-slot="input"
                        id="num_robotic_equipment-min-input"
                        placeholder="min(30)"
                        type="number"
                        value=""
                      />
                      <input
                        aria-label="Equipment's count max"
                        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary!"
                        data-slot="input"
                        id="num_robotic_equipment-max-input"
                        placeholder="max(100)"
                        type="number"
                        value=""
                      />
                    </div>
                    <label
                      class="flex! cursor-pointer! items-center! gap-2! pt-1! text-xs! text-filter-muted!"
                      for="checkbox-school__num_robotic_equipment__range"
                    >
                      <input
                        class="size-4! accent-primary!"
                        id="checkbox-school__num_robotic_equipment__range"
                        type="checkbox"
                      />
                      <span>
                        Show null values
                      </span>
                    </label>
                  </div>
                  <div
                    class="flex! flex-col! gap-2! px-4! py-2!"
                  >
                    <label
                      class="flex! items-center! text-xs! leading-4! font-normal! text-filter-muted!"
                      for="dropdown-coverage_type"
                    >
                      Maps views - Grouped
                      <button
                        class="ml-0.5! -m-1.5! inline-flex! size-6! cursor-pointer! items-center! justify-center! rounded-full! border-0! bg-transparent! p-1.5! align-middle! text-filter-muted! transition-colors! hover:text-filter-text!"
                        data-state="closed"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-info"
                          fill="none"
                          height="12"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </button>
                    </label>
                    <div
                      class="relative!"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary! justify-between! text-left!"
                        id="dropdown-coverage_type"
                        type="button"
                      >
                        <span
                          class="truncate!"
                        >
                          All
                        </span>
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevron-down size-4! shrink-0! text-filter-muted!"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m6 9 6 6 6-6"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="flex! flex-col! gap-2! px-4! py-2!"
                  >
                    <label
                      class="flex! items-center! text-xs! leading-4! font-normal! text-filter-muted!"
                    >
                      No of Computer
                    </label>
                    <div
                      class="flex! gap-4!"
                    >
                      <input
                        aria-label="No of Computer min"
                        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary!"
                        data-slot="input"
                        id="num_computers-min-input"
                        placeholder="Min (0)"
                        type="number"
                        value=""
                      />
                      <input
                        aria-label="No of Computer max"
                        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary!"
                        data-slot="input"
                        id="num_computers-max-input"
                        placeholder="Max (1450)"
                        type="number"
                        value=""
                      />
                    </div>
                    <label
                      class="flex! cursor-pointer! items-center! gap-2! pt-1! text-xs! text-filter-muted!"
                      for="checkbox-school__num_computers__range"
                    >
                      <input
                        class="size-4! accent-primary!"
                        id="checkbox-school__num_computers__range"
                        type="checkbox"
                      />
                      <span>
                        Show null values
                      </span>
                    </label>
                  </div>
                  <div
                    class="flex! flex-col! gap-2! px-4! py-2!"
                  >
                    <label
                      class="flex! items-center! text-xs! leading-4! font-normal! text-filter-muted!"
                      for="text-input-environment"
                    >
                      Region
                      <button
                        class="ml-0.5! -m-1.5! inline-flex! size-6! cursor-pointer! items-center! justify-center! rounded-full! border-0! bg-transparent! p-1.5! align-middle! text-filter-muted! transition-colors! hover:text-filter-text!"
                        data-state="closed"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-info"
                          fill="none"
                          height="12"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </button>
                    </label>
                    <input
                      class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary!"
                      data-slot="input"
                      id="text-input-environment"
                      placeholder="Enter region"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="flex! flex-col! gap-2! px-4! py-2!"
                  >
                    <label
                      class="flex! items-center! text-xs! leading-4! font-normal! text-filter-muted!"
                      for="dropdown-environment"
                    >
                      School area type - Org
                      <button
                        class="ml-0.5! -m-1.5! inline-flex! size-6! cursor-pointer! items-center! justify-center! rounded-full! border-0! bg-transparent! p-1.5! align-middle! text-filter-muted! transition-colors! hover:text-filter-text!"
                        data-state="closed"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-info"
                          fill="none"
                          height="12"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </button>
                    </label>
                    <div
                      class="relative!"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary! justify-between! text-left!"
                        id="dropdown-environment"
                        type="button"
                      >
                        <span
                          class="truncate!"
                        >
                          All
                        </span>
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevron-down size-4! shrink-0! text-filter-muted!"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m6 9 6 6 6-6"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="flex! flex-col! gap-2! px-4! py-2!"
                  >
                    <label
                      class="flex! items-center! text-xs! leading-4! font-normal! text-filter-muted!"
                    >
                      Test Filter NG-001
                      <button
                        class="ml-0.5! -m-1.5! inline-flex! size-6! cursor-pointer! items-center! justify-center! rounded-full! border-0! bg-transparent! p-1.5! align-middle! text-filter-muted! transition-colors! hover:text-filter-text!"
                        data-state="closed"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-info"
                          fill="none"
                          height="12"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </button>
                    </label>
                    <div
                      class="flex! gap-4!"
                    >
                      <input
                        aria-label="Test Filter NG-001 min"
                        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary!"
                        data-slot="input"
                        id="connectivity_speed-min-input"
                        placeholder="Min (35)"
                        type="number"
                        value=""
                      />
                      <input
                        aria-label="Test Filter NG-001 max"
                        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary!"
                        data-slot="input"
                        id="connectivity_speed-max-input"
                        placeholder="Max (36)"
                        type="number"
                        value=""
                      />
                    </div>
                    <label
                      class="flex! cursor-pointer! items-center! gap-2! pt-1! text-xs! text-filter-muted!"
                      for="checkbox-school__connectivity_speed__range"
                    >
                      <input
                        class="size-4! accent-primary!"
                        id="checkbox-school__connectivity_speed__range"
                        type="checkbox"
                      />
                      <span>
                        Show null values
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex! shrink-0! gap-3! px-4! pb-4!"
      >
        <button
          class="inline-flex items-center justify-center gap-1 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=size-])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 px-4 py-2 has-[>svg]:px-3 h-10! flex-1! rounded-full! bg-secondary! text-sm! font-medium! text-secondary-foreground! hover:bg-secondary/80!"
          data-size="default"
          data-slot="button"
          data-variant="secondary"
          type="button"
        >
          Clear all
        </button>
        <button
          class="inline-flex items-center justify-center gap-1 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=size-])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 h-10! flex-1! rounded-full! bg-primary! text-sm! font-medium! text-primary-foreground! hover:bg-primary/90!"
          data-size="default"
          data-slot="button"
          data-variant="default"
          type="button"
        >
          Apply
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`AdvancedFilter > should render Advance filter button  1`] = `
<DocumentFragment>
  <div
    class="filter-wrapper-popup relative! z-99! my-2! mr-2! flex! flex-col! items-center!"
  >
    <div
      class="filter-popover-link relative! inline-flex!"
    >
      <button
        aria-label="Filters"
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=size-])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-secondary text-secondary-foreground hover:bg-secondary/80 h-8 gap-1.5 px-3 has-[>svg]:px-2.5 font-['Open_Sans',sans-serif]! h-8! gap-1.5! rounded-md! px-2.5! text-sm! bg-secondary! text-secondary-foreground! hover:bg-secondary/80!"
        data-size="sm"
        data-slot="button"
        data-variant="secondary"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sliders-horizontal size-4!"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 5H3"
          />
          <path
            d="M12 19H3"
          />
          <path
            d="M14 3v4"
          />
          <path
            d="M16 17v4"
          />
          <path
            d="M21 12h-9"
          />
          <path
            d="M21 19h-5"
          />
          <path
            d="M21 5h-7"
          />
          <path
            d="M8 10v4"
          />
          <path
            d="M8 12H3"
          />
        </svg>
        <span>
          Filters
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AdvancedFilter > should render Advance filter button 1`] = `<DocumentFragment />`;

exports[`RangeTextInput Component > RangeTextInput input 1`] = `
<div>
  <div
    class="flex! flex-col! gap-2! px-4! py-2!"
  >
    <label
      class="flex! items-center! text-xs! leading-4! font-normal! text-filter-muted!"
    >
      No of Teachers
      <button
        class="ml-0.5! -m-1.5! inline-flex! size-6! cursor-pointer! items-center! justify-center! rounded-full! border-0! bg-transparent! p-1.5! align-middle! text-filter-muted! transition-colors! hover:text-filter-text!"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-info"
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
      </button>
    </label>
    <div
      class="flex! gap-4!"
    >
      <input
        aria-label="No of Teachers min"
        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary!"
        data-slot="input"
        id="-min-input"
        placeholder="Min (0)"
        type="number"
        value="15"
      />
      <input
        aria-label="No of Teachers max"
        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex! h-10! w-full! items-center! gap-1.5! self-stretch! rounded-lg! border-0! bg-filter-field! px-2.5! py-1.5! text-sm! font-medium! text-filter-text! shadow-none! outline-none! placeholder:text-filter-muted! focus-visible:ring-1! focus-visible:ring-primary!"
        data-slot="input"
        id="-max-input"
        placeholder="Max (10K)"
        type="number"
        value="20"
      />
    </div>
    <label
      class="flex! cursor-pointer! items-center! gap-2! pt-1! text-xs! text-filter-muted!"
      for="checkbox-num_computers__range"
    >
      <input
        checked=""
        class="size-4! accent-primary!"
        id="checkbox-num_computers__range"
        type="checkbox"
      />
      <span>
        Show null values
      </span>
    </label>
  </div>
</div>
`;
